@@ -1,3 +1,8 @@
+2006-05-09  Daniel Holbach  <dholbach@ubuntu.com>
+
+	* gnome-da-capplet.c: (close_cb): update help section name. Closes
+	bug #340032.
+
 2006-05-09  Luca Cavalli  <lcavalli@cvs.gnome.org>
 
 	* gnome-default-applications.xml.in: remove unnecessary
